# cloudpub

./: .dockerignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: release.yml
client/: Cargo.toml  Dockerfile.amd64  Dockerfile.arm64  README.md  build.rs
client/locales/: en.ftl  ru.ftl
client/src/: base.rs  client.rs  commands.rs  config.rs  lib.rs  main.rs  options.rs  ping.rs  shell.rs  upgrade.rs
client/src/plugins/: httpd.rs  plugin_trait.rs  registry.rs
client/src/plugins/minecraft/: mod.rs
client/src/plugins/onec/: httpd.conf  mod.rs
client/src/plugins/webdav/: httpd.conf  mod.rs
client/src/service/: linux.rs  macos.rs  mod.rs  windows.rs
client/src/service/templates/: launchd.plist  systemd.service
client/src/upgrade/: mod.rs
client/src/upgrade/scripts/: launchd_oneshot.plist  linux_deb_install.sh  linux_rpm_install.sh  macos_dmg_install.sh  systemd_oneshot.service  unix_client_update.sh  unix_service_update.sh  windows_client_update.bat  windows_msi_install.bat  windows_service_update.bat
common/: Cargo.toml  README.md  build.rs
common/src/: config.rs  constants.rs  data.rs  fair_channel.rs  lease.rs  lib.rs  logging.rs  protocol.proto  protocol.rs  proxy_protocol.rs  routing.rs  utils.rs  version.rs
common/src/transport/: mod.rs  rustls.rs  tcp.rs  websocket.rs
common/src/unix_tcp/: listener.rs  mod.rs  socket_addr.rs  stream.rs
docs/en/: package-lock.json  tsconfig.json
docs/en/docs/: cli.md  intro.md
docs/ru/: docusaurus.config.ts  package-lock.json  package.json
docs/ru/blog/: 2024-09-01-welcome.md  2024-09-30-create-tunnel.md  2024-10-04-1c-publishing.md  2024-10-11-minecraft.md  2024-10-17-logs.md  2024-11-10-version-1.2.md  2024-11-25-django.md  2024-12-17-version-1.3.md  2025-01-30-rtsp.md  2025-04-09-version-1.5.md  2025-06-20-version-2.0.md  2025-07-14-filters.md  2025-08-11-cloudpub-2x-tech.md  2025-09-22-sdk-python-rust.md  2025-09-27-version-2.4.5.md  2025-12-01-version-3.0.md
docs/ru/docs/: 1c.md  2fa.md  audit.md  auth.md  bastion.md  changelog.md  cli.md  docker.md  domains.md  faq.md  filters.md  groups.md  http.md  intro.md  minecraft.md  onprem.md  rtsp.md  sdk.md  tcp.md  webdav.md
docs/ru/docs/cases/: 1c-access.md  2fa.md  _category_.yml  audit.md  bastion.md  custom-domains.md  docker-services.md  home-assistant.md  minecraft-server.md  rdp-access.md  router-management.md  ssh-tunneling.md  team-collaboration.md  telegram-mini-apps.md  traffic-filtering.md  web-development.md  webdav-server.md  webhooks.md
docs/ru/static/css/: fair-queue-animation.css
docs/ru/static/js/: fair-queue-animation.js
sdk/python/: Cargo.toml  Dockerfile  README.md  build-wheels-macos.sh  build-wheels.sh  example.py  pyproject.toml
sdk/python/docs/: api_reference.rst  conf.py  index.rst
sdk/python/src/: lib.rs
sdk/rust/: Cargo.toml  README.md
sdk/rust/examples/: example.rs
sdk/rust/src/: builder.rs  connection.rs  lib.rs
