[workspace]
members = ["common", "client", "sdk/rust"]
resolver = "2"

[workspace.dependencies]
async-trait = "0.1.88"
tokio = { version = "1.46", features = ["full"] }
tokio-util = { version = "0.7.15", features = ["io", "net"] }
bytes = { version = "1.10", features = ["serde"] }
clap = { version = "4.5.41", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
anyhow = "1.0.98"
lazy_static = "1.5.0"
backoff = { version = "0.4.0", features = ["tokio"] }
rand = "0.9.2"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = [
  "env-filter",
  "time",
  "local-time",
] }
time = "0.3.41"
url = { version = "2.5.4", features = ["serde"] }
futures = "0.3.31"
futures-core = "0.3.31"
futures-sink = "0.3.31"
serde_json = "1.0.141"
parking_lot = "0.12.4"
dirs = "6.0.0"
uuid = { version = "1.17.0", features = ["v4"] }
regex = "1.11.1"
base64 = "0.22.1"
libc = "0.2.174"
fluent = "0.17.0"
fluent-bundle = "0.16.0"
unic-langid = "0.9.6"
dashmap = "6.1.0"

[profile.release]
panic = "unwind"
lto = true
codegen-units = 1
debug = 1
strip = false

[profile.minimal]
inherits = "release"
strip = true
panic = "abort"
debug = 0
opt-level = "z"
lto = true
codegen-units = 1

[profile.perf]
inherits = "release"
debug = 1
