[package]
name = "cloudpub-client"
version = "2.4.5"
edition = "2021"
authors = ["CloudPub <support@cloudpub.ru>"]
license = "Apache-2.0"
description = "CloudPub CLI client for secure tunnel and service publishing"
homepage = "https://github.com/ermak-dev/cloudpub"
repository = "https://github.com/ermak-dev/cloudpub"

[package.metadata.winres]
OriginalFilename = "clo.exe"
FileDescription = "CloudPub client"
ProductName = "CloudPub"

[lib]
name = "cloudpub_client"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "clo"
path = "src/main.rs"

[features]
default = ["plugins", "windows-service", "reqwest/rustls-tls-native-roots"]
plugins = []

[build-dependencies]
fluent = "0.17"
fluent-bundle = "0.16"
unic-langid = "0.9"

[dependencies]
cloudpub-common = { version = "2.4.5", path = "../common", features = ["rustls"] }
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
futures.workspace = true
bytes.workspace = true
clap = { workspace = true, features = ["env"] }
fdlimit = "0.3.0"
serde.workspace = true
anyhow.workspace = true
lazy_static.workspace = true
backoff.workspace = true
dirs.workspace = true
reqwest = { default-features = false, version = "0.12.22", features = [
  "stream",
  "rustls-tls-manual-roots",
  "rustls-tls",
] }
indicatif = { version = "0.18.0", features = ["tokio", "improved_unicode"] }
zip = { version = "5.1.1" }
toml = "0.9.2"
walkdir = "2.5.0"
uuid.workspace = true
parking_lot.workspace = true
hostname = "0.4.1"
url.workspace = true
xml-rs = "0.8.27"
ctrlc = "3.4.7"
regex.workspace = true
# machineid-rs = "1.2.4"
windows-service = { version = "0.8.0", optional = true }
async-trait.workspace = true
rpassword = "7.4.0"
x509-parser = "0.17.0"
dashmap.workspace = true

# Localization
fluent.workspace = true
fluent-bundle.workspace = true
unic-langid.workspace = true

[target.'cfg(unix)'.dependencies]
nix = { version = "0.30.1", features = ["signal"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.55.0"

[target.'cfg(not(target_os = "android"))'.dependencies]
machineid-rs = "1.2.4"

[target.'cfg(target_os = "android")'.dependencies]
which = "8.0.0"
machineid-rs-termux = { git = "https://github.com/Taptiive/machineid-rs", rev = "refs/pull/33/head", package = "machineid-rs" }
