[package]
name = "cloudpub-sdk"
version = "2.4.5"
edition = "2021"
authors = ["CloudPub <support@cloudpub.ru>"]
license = "Apache-2.0"
description = "Rust SDK for CloudPub - A secure tunnel and service publishing platform"
homepage = "https://github.com/ermak-dev/cloudpub"
repository = "https://github.com/ermak-dev/cloudpub"
readme = "README.md"

[dependencies]
anyhow.workspace = true
tokio.workspace = true
parking_lot.workspace = true
dirs.workspace = true
futures.workspace = true
tracing.workspace = true
fdlimit = "0.3"

# Internal dependencies
cloudpub-client = { version = "2.4.5", path = "../../client" }
cloudpub-common = { version = "2.4.5", path = "../../common" }

[[example]]
name = "example"
path = "examples/example.rs"
